// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAst snapshots > full RootNode 1`] = `
{
  "kind": "Root",
  "operations": [
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Operation",
      "method": "GET",
      "operationId": "listPets",
      "parameters": [
        {
          "in": "query",
          "kind": "Parameter",
          "name": "limit",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "maximum": 100,
            "minimum": 1,
            "name": undefined,
            "nullable": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
      ],
      "path": "/pets",
      "requestBody": undefined,
      "responses": [
        {
          "description": "A list of pets",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "ref": "PetList",
            "type": "ref",
          },
          "statusCode": "200",
        },
        {
          "description": "Bad request",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "ref": "Error",
            "type": "ref",
          },
          "statusCode": "400",
        },
      ],
      "summary": "List all pets",
      "tags": [
        "pets",
      ],
    },
    {
      "deprecated": true,
      "description": undefined,
      "kind": "Operation",
      "method": "POST",
      "operationId": "createPet",
      "parameters": [],
      "path": "/pets",
      "requestBody": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "ref": "NewPet",
        "type": "ref",
      },
      "responses": [
        {
          "description": "Pet created",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "ref": "Pet",
            "type": "ref",
          },
          "statusCode": "201",
        },
      ],
      "summary": undefined,
      "tags": [
        "pets",
      ],
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Operation",
      "method": "GET",
      "operationId": "getPetById",
      "parameters": [
        {
          "in": "path",
          "kind": "Parameter",
          "name": "petId",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "maximum": undefined,
            "minimum": undefined,
            "name": undefined,
            "nullable": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
      ],
      "path": "/pets/{petId}",
      "requestBody": undefined,
      "responses": [
        {
          "description": "A single pet",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "ref": "Pet",
            "type": "ref",
          },
          "statusCode": "200",
        },
        {
          "description": "Not found",
          "kind": "Response",
          "mediaType": undefined,
          "schema": undefined,
          "statusCode": "404",
        },
      ],
      "summary": undefined,
      "tags": [
        "pets",
      ],
    },
  ],
  "schemas": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "Pet",
      "nullable": undefined,
      "properties": [
        {
          "kind": "Property",
          "name": "id",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "maximum": undefined,
            "minimum": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "readOnly": true,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "name",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "tag",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": true,
            "nullish": true,
            "optional": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "NewPet",
      "nullable": undefined,
      "properties": [
        {
          "kind": "Property",
          "name": "name",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "tag",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": true,
            "pattern": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "items": [
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "ref": "Pet",
          "type": "ref",
        },
      ],
      "kind": "Schema",
      "maxLength": undefined,
      "minLength": undefined,
      "name": "PetList",
      "nullable": undefined,
      "readOnly": undefined,
      "title": undefined,
      "type": "array",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "Error",
      "nullable": undefined,
      "properties": [
        {
          "kind": "Property",
          "name": "code",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "exclusiveMaximum": undefined,
            "exclusiveMinimum": undefined,
            "kind": "Schema",
            "maximum": undefined,
            "minimum": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "integer",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "message",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "title": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "enumValues": [
        "active",
        "inactive",
        "pending",
      ],
      "example": undefined,
      "kind": "Schema",
      "name": "Status",
      "nullable": undefined,
      "readOnly": undefined,
      "title": undefined,
      "type": "enum",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "members": [
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "ref": "Pet",
          "type": "ref",
        },
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "ref": "Error",
          "type": "ref",
        },
      ],
      "name": "PetOrError",
      "nullable": undefined,
      "readOnly": undefined,
      "title": undefined,
      "type": "union",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "members": [
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "pattern": undefined,
          "ref": "Pet",
          "type": "ref",
        },
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "properties": [
            {
              "kind": "Property",
              "name": "createdAt",
              "required": false,
              "schema": {
                "default": undefined,
                "deprecated": undefined,
                "description": undefined,
                "example": undefined,
                "kind": "Schema",
                "name": undefined,
                "nullable": undefined,
                "nullish": undefined,
                "optional": true,
                "readOnly": undefined,
                "title": undefined,
                "type": "datetime",
                "writeOnly": undefined,
              },
            },
            {
              "kind": "Property",
              "name": "email",
              "required": false,
              "schema": {
                "default": undefined,
                "deprecated": undefined,
                "description": undefined,
                "example": undefined,
                "kind": "Schema",
                "name": undefined,
                "nullable": undefined,
                "nullish": undefined,
                "optional": true,
                "readOnly": undefined,
                "title": undefined,
                "type": "email",
                "writeOnly": undefined,
              },
            },
          ],
          "readOnly": undefined,
          "title": undefined,
          "type": "object",
          "writeOnly": undefined,
        },
      ],
      "name": "FullPet",
      "nullable": undefined,
      "readOnly": undefined,
      "title": undefined,
      "type": "intersection",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": "some-value",
      "kind": "Schema",
      "maxLength": undefined,
      "minLength": undefined,
      "name": "NullableString",
      "nullable": true,
      "pattern": undefined,
      "readOnly": true,
      "title": undefined,
      "type": "string",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "NullableRef",
      "nullable": true,
      "pattern": undefined,
      "readOnly": undefined,
      "ref": "Pet",
      "title": undefined,
      "type": "ref",
      "writeOnly": undefined,
    },
  ],
}
`;

exports[`buildAst snapshots > operation 'createPet' 1`] = `
{
  "deprecated": true,
  "description": undefined,
  "kind": "Operation",
  "method": "POST",
  "operationId": "createPet",
  "parameters": [],
  "path": "/pets",
  "requestBody": {
    "default": undefined,
    "deprecated": undefined,
    "description": undefined,
    "example": undefined,
    "kind": "Schema",
    "name": undefined,
    "nullable": undefined,
    "pattern": undefined,
    "ref": "NewPet",
    "type": "ref",
  },
  "responses": [
    {
      "description": "Pet created",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "ref": "Pet",
        "type": "ref",
      },
      "statusCode": "201",
    },
  ],
  "summary": undefined,
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > operation 'getPetById' 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Operation",
  "method": "GET",
  "operationId": "getPetById",
  "parameters": [
    {
      "in": "path",
      "kind": "Parameter",
      "name": "petId",
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "exclusiveMaximum": undefined,
        "exclusiveMinimum": undefined,
        "kind": "Schema",
        "maximum": undefined,
        "minimum": undefined,
        "name": undefined,
        "nullable": undefined,
        "readOnly": undefined,
        "title": undefined,
        "type": "integer",
        "writeOnly": undefined,
      },
    },
  ],
  "path": "/pets/{petId}",
  "requestBody": undefined,
  "responses": [
    {
      "description": "A single pet",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "ref": "Pet",
        "type": "ref",
      },
      "statusCode": "200",
    },
    {
      "description": "Not found",
      "kind": "Response",
      "mediaType": undefined,
      "schema": undefined,
      "statusCode": "404",
    },
  ],
  "summary": undefined,
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > operation 'listPets' 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Operation",
  "method": "GET",
  "operationId": "listPets",
  "parameters": [
    {
      "in": "query",
      "kind": "Parameter",
      "name": "limit",
      "required": false,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "exclusiveMaximum": undefined,
        "exclusiveMinimum": undefined,
        "kind": "Schema",
        "maximum": 100,
        "minimum": 1,
        "name": undefined,
        "nullable": undefined,
        "readOnly": undefined,
        "title": undefined,
        "type": "integer",
        "writeOnly": undefined,
      },
    },
  ],
  "path": "/pets",
  "requestBody": undefined,
  "responses": [
    {
      "description": "A list of pets",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "ref": "PetList",
        "type": "ref",
      },
      "statusCode": "200",
    },
    {
      "description": "Bad request",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "ref": "Error",
        "type": "ref",
      },
      "statusCode": "400",
    },
  ],
  "summary": "List all pets",
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > schema 'FullPet' ('allOf / intersection with format fiel…') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "kind": "Schema",
  "members": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "ref": "Pet",
      "type": "ref",
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "properties": [
        {
          "kind": "Property",
          "name": "createdAt",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": true,
            "readOnly": undefined,
            "title": undefined,
            "type": "datetime",
            "writeOnly": undefined,
          },
        },
        {
          "kind": "Property",
          "name": "email",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "nullish": undefined,
            "optional": true,
            "readOnly": undefined,
            "title": undefined,
            "type": "email",
            "writeOnly": undefined,
          },
        },
      ],
      "readOnly": undefined,
      "title": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
  ],
  "name": "FullPet",
  "nullable": undefined,
  "readOnly": undefined,
  "title": undefined,
  "type": "intersection",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'Pet' ('object with required props') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "kind": "Schema",
  "name": "Pet",
  "nullable": undefined,
  "properties": [
    {
      "kind": "Property",
      "name": "id",
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "exclusiveMaximum": undefined,
        "exclusiveMinimum": undefined,
        "kind": "Schema",
        "maximum": undefined,
        "minimum": undefined,
        "name": undefined,
        "nullable": undefined,
        "nullish": undefined,
        "optional": undefined,
        "readOnly": true,
        "title": undefined,
        "type": "integer",
        "writeOnly": undefined,
      },
    },
    {
      "kind": "Property",
      "name": "name",
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "maxLength": undefined,
        "minLength": undefined,
        "name": undefined,
        "nullable": undefined,
        "nullish": undefined,
        "optional": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "title": undefined,
        "type": "string",
        "writeOnly": undefined,
      },
    },
    {
      "kind": "Property",
      "name": "tag",
      "required": false,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "maxLength": undefined,
        "minLength": undefined,
        "name": undefined,
        "nullable": true,
        "nullish": true,
        "optional": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "title": undefined,
        "type": "string",
        "writeOnly": undefined,
      },
    },
  ],
  "readOnly": undefined,
  "title": undefined,
  "type": "object",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'PetList' ('array of refs') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "items": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "ref": "Pet",
      "type": "ref",
    },
  ],
  "kind": "Schema",
  "maxLength": undefined,
  "minLength": undefined,
  "name": "PetList",
  "nullable": undefined,
  "readOnly": undefined,
  "title": undefined,
  "type": "array",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'PetOrError' ('oneOf / union') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "kind": "Schema",
  "members": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "ref": "Pet",
      "type": "ref",
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "pattern": undefined,
      "ref": "Error",
      "type": "ref",
    },
  ],
  "name": "PetOrError",
  "nullable": undefined,
  "readOnly": undefined,
  "title": undefined,
  "type": "union",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'Status' ('enum') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "enumValues": [
    "active",
    "inactive",
    "pending",
  ],
  "example": undefined,
  "kind": "Schema",
  "name": "Status",
  "nullable": undefined,
  "readOnly": undefined,
  "title": undefined,
  "type": "enum",
  "writeOnly": undefined,
}
`;
